--- a/new-file/style.css
+++ b/new-file/style.css
@@ -1,9 +1,12 @@
 body {
   background: #fff2cc;
+  position: absolute;
 }
 
 .firstElement {
-  height: 10px;
-  width: 10px;
+  position:relative;
+  top: 10px;
+  height: 50px;
+  width: 50px;
   background-color: pink;
 }
