--- a/new-file/style.css
+++ b/new-file/style.css
@@ -1,12 +1,19 @@
 body {
   background: #fff2cc;
+}
+
+.wrapper {
+  height: 600px;
+  width: 600px;
+  border: 3px solid black;
   position: absolute;
 }
 
 .firstElement {
   position:relative;
   top: 10px;
-  height: 50px;
-  width: 50px;
+  height: 70px;
+  width: 70px;
   background-color: pink;
+  clip-path: polygon(50% 0%, 100% 0, 100% 26%, 28% 26%, 28% 70%, 27% 71%, 0 71%, 0% 70%, 0% 35%, 0 0);
 }
