--- a/new-file/style.css
+++ b/new-file/style.css
@@ -2,8 +2,27 @@ body {
   background: #fff2cc;
 }
 
+.text-tetris {
+  text-align: center;
+  	-webkit-background-clip: text;
+  	-webkit-text-fill-color: transparent;
+  	background-image: url(https://www.incimages.com/uploaded_files/image/1920x1080/tetris-970x450_34839.jpg);
+	background-size: 200px 100px;
+	/* background-attachment: unset; */
+	background-position: 39%;
+	font-size: 150px;
+  margin: 0;
+  /* font-weight: bold; */
+}
+
+.outer-wrapper {
+  display: flex;
+  justify-content: center;
+}
+
 .wrapper {
-  height: 600px;
+  margin: 0 auto;
+  height: 500px;
   width: 600px;
   border: 3px solid black;
   position: absolute;
