--- a/new-file/style.css
+++ b/new-file/style.css
@@ -21,7 +21,10 @@ body {
 }
 
 #tetris {
-  border: 3px solid black;
+  border-top: 3px solid pink;
+  border-left: 3px solid blue;
+  border-right: 3px solid green;
+  border-bottom: 3px solid yellow;
 }
 
 /* .wrapper {
