--- a/calendo/src/Card.css
+++ b/calendo/src/Card.css
@@ -10,3 +10,11 @@
   flex-wrap: wrap;
   width: 719px;
 }
+
+.mini-card {
+  border-radius: 10%;
+  border: 1px solid black;
+  width: 100px;
+  height: 20px;
+  background: blue;
+}
