improve the structure of files

--- a/calendo/src/Card.scss
+++ b/calendo/src/Card.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
+
 .card {
   border: 1px dashed black;
   width: 150px;
@@ -5,9 +7,21 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  font-family: 'Dancing Script', cursive;
+  font-size: 20px;
 
   &__details {
     display: block;
+  }
+
+  &-number {
+    font-weight: bold;
+    text-align: center;
+  }
+
+  &-today {
+    font-weight: bold;
+    text-align: center;
   }
 }
 
@@ -34,6 +48,7 @@
   background-color: orange;
   padding: 0.7rem;
   border-radius: 90%;
+  width: min-content;
 }
 
 form {
@@ -41,10 +56,6 @@ form {
 }
 
 .todo {
-  // width: 70px;
-  // height: 70px;
-  // border-radius: 20%;
-  // border: 1px solid black;
 
   &__submit-button {
     width: 100%;
@@ -53,4 +64,14 @@ form {
 
 .hidden {
   display: none;
+}
+
+.calendar {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+ul {
+ list-style-type: '💡';
 }
