--- a/calendo/src/styles/base/_base.scss
+++ b/calendo/src/styles/base/_base.scss
@@ -6,6 +6,7 @@ html {
 body {
   font-family: Helvetica, Arial, sans-serif;
   font-size: $m-size;
+  font-family: "Architects Daughter", cursive;
 }
 
 button {
