--- a/calendo/src/Card.scss
+++ b/calendo/src/Card.scss
@@ -40,7 +40,7 @@
       margin: 0;
       color: #F36969;
       top: 53px;
-      right: 0px;
+      left: 0px;
       position: absolute;
     }
   }
