--- a/calendo/src/Card.scss
+++ b/calendo/src/Card.scss
@@ -15,6 +15,8 @@
   position: relative;
 
   &--cross {
+  display: flex;
+  align-items: center;
   width: 120px;
   height:100px;
   background:
@@ -36,10 +38,10 @@
     display: flex;
 
     &-number {
-      font-size: xxx-large;
+      font-size: 70px;
       margin: 0;
       color: #F36969;
-      top: 53px;
+      top: 30px;
       left: 0px;
       position: absolute;
     }
